gradient line spacing fix

--- a/css/main.scss
+++ b/css/main.scss
@@ -90,7 +90,7 @@ blockquote p:last-of-type {
 	width: 10%;
 	height: 1px;
 	line-height:0;
-	margin: 15px auto;
+	margin: 2.5rem auto;
 	padding: 0;
 	border: 0;
 	background: #7534ff; /* Old browsers */
